@startuml engine-dict-system
!theme plain
skinparam backgroundColor #FEFEFE
skinparam classAttributeIconSize 0
skinparam defaultFontSize 11

title 字典系统

legend right
  |= 颜色 |= 说明 |
  | <#FFE0B2> | 公开接口 |
  | <#FFF3E0> | 内部实现 |
  | <#C8E6C9> | 数据模型 |
  | <#BBDEFB> | Room 数据库层 |
endlegend

' ===== 公开接口 =====
package "公开接口" #FFE0B2 {
  interface ImeDictProvider <<(I,#FFE0B2)>> {
    + query(pinyin): List<Candidate>
    + queryPrefix(prefix): List<Candidate>
    + recordInput(pinyin, word)
  }
}

' ===== 内部实现 =====
package "内部实现" #FFF3E0 {
  class ImeSqliteDictProvider <<(C,#FFF3E0)>> {
    - dictRepository: DictRepository
    - pinyinCharsTree: PinyinCharsTree
    - hmmModel: HmmModel
    + query(pinyin): List<Candidate>
    + queryPrefix(prefix): List<Candidate>
    + recordInput(pinyin, word)
  }

  class DictRepository <<(C,#FFF3E0)>> {
    - wordDao: PinyinWordDao
    - phraseDao: PinyinPhraseDao
    - userInputDao: UserInputDao
    - favoriteDao: FavoriteDao
    - hmmDao: HmmDao
    + lookupPinyinWords(spell): List<InputWord.Pinyin>
    + lookupPinyinPhrases(spells): List<InputWord.PinyinPhrase>
    + predictPhrase(currentSpell, context): List<InputWord.PinyinPhrase>
    + getLatinCompletions(prefix): List<InputCompletion.LatinWord>
    + recordUserInput(text, type)
    + observeFavorites(): Flow<List<InputFavorite>>
  }
}

' ===== 数据模型 =====
package "数据模型" #C8E6C9 {
  class PinyinCharsTree <<(D,#C8E6C9)>> {
    + children: Map<Char, PinyinCharsTree>
    + keys: List<InputKey.Char>
    + find(prefix): PinyinCharsTree?
    + allReachableChars(): Set<Char>
  }

  class HmmModel <<(D,#C8E6C9)>> {
    + states: Set<HmmState>
    + observations: Set<HmmObservation>
    + initialProb: Map<HmmState, Double>
    + transitionProb: Map<HmmState, Map<HmmState, Double>>
    + emissionProb: Map<HmmState, Map<HmmObservation, Double>>
  }

  class ViterbiDecoder <<(C,#C8E6C9)>> {
    - model: HmmModel
    + decode(observations): List<HmmState>
  }

  class HmmState <<(V,#C8E6C9)>> {
    + value: String
  }
  class HmmObservation <<(V,#C8E6C9)>> {
    + value: String
  }
}

' ===== Room 数据库层 =====
package "Room 数据库层" #BBDEFB {
  class DictDatabase <<(C,#BBDEFB)>> {
    + pinyinWordDao(): PinyinWordDao
    + pinyinPhraseDao(): PinyinPhraseDao
    + userInputDao(): UserInputDao
    + favoriteDao(): FavoriteDao
    + hmmDao(): HmmDao
    + {static} MIGRATION_3_4
  }

  interface PinyinWordDao <<(I,#BBDEFB)>> {
    + lookupBySpell(spell): List<PinyinWordEntity>
    + lookupByPrefix(prefix, limit): List<PinyinWordEntity>
    + lookupSpellsByPrefix(prefix): List<String>
    + lookupVariants(spell): List<PinyinWordEntity>
  }

  interface PinyinPhraseDao <<(I,#BBDEFB)>> {
    + lookupBySpellPrefix(spellPrefix, limit): List<PinyinPhraseEntity>
    + lookupBySpells(spells): List<PinyinPhraseEntity>
  }

  interface UserInputDao <<(I,#BBDEFB)>> {
    + getTopByType(type, limit): List<UserInputEntity>
    + getCompletions(prefix, type, limit): List<UserInputEntity>
    + upsert(entity)
    + incrementFrequency(text, type, timestamp)
  }

  interface FavoriteDao <<(I,#BBDEFB)>> {
    + getAllFlow(): Flow<List<FavoriteEntity>>
    + getAll(): List<FavoriteEntity>
    + upsert(entity)
    + delete(text)
  }

  interface HmmDao <<(I,#BBDEFB)>> {
    + predictNextStates(spell): List<String>
  }

  class PinyinWordEntity <<(D,#BBDEFB)>> {
    + id: Long
    + spell: String
    + text: String
    + freq: Int
    + variant: String?
    + tone: Int?
  }
  class PinyinPhraseEntity <<(D,#BBDEFB)>> {
    + id: Long
    + spells: String
    + text: String
    + freq: Int
  }
  class UserInputEntity <<(D,#BBDEFB)>> {
    + id: Long
    + text: String
    + type: String
    + freq: Int
    + lastUsed: Long
  }
  class FavoriteEntity <<(D,#BBDEFB)>> {
    + id: Long
    + text: String
    + type: String?
    + usageCount: Int
    + createdAt: Long
  }
  class HmmTransitionEntity <<(D,#BBDEFB)>> {
    + id: Long
    + fromState: String
    + toState: String
    + probability: Double
  }
}

' ===== 关系 =====
ImeDictProvider <|.. ImeSqliteDictProvider : 内部实现
ImeSqliteDictProvider *-- DictRepository : 委托
ImeSqliteDictProvider *-- PinyinCharsTree : 组合
ImeSqliteDictProvider *-- HmmModel : 组合

DictRepository --> PinyinWordDao : 使用
DictRepository --> PinyinPhraseDao : 使用
DictRepository --> UserInputDao : 使用
DictRepository --> FavoriteDao : 使用
DictRepository --> HmmDao : 使用
DictRepository --> ViterbiDecoder : 使用

HmmModel --> HmmState : 使用
HmmModel --> HmmObservation : 使用
ViterbiDecoder --> HmmModel : 使用

DictDatabase --> PinyinWordDao : 提供
DictDatabase --> PinyinPhraseDao : 提供
DictDatabase --> UserInputDao : 提供
DictDatabase --> FavoriteDao : 提供
DictDatabase --> HmmDao : 提供

' ===== 查询流程 =====
note right of ImeSqliteDictProvider
  **查询流程**
  1. PinyinCharsTree 前缀匹配获取候选
  2. HmmModel 计算转移概率排序
  3. ViterbiDecoder 解码最优路径
  4. 合并用户词频和收藏权重
end note

note bottom of DictDatabase
  **预构建字典 (assets/dict/)**
  pinyin_word_dict.db ← 拼音字库
  pinyin_phrase_dict.db ← 拼音词库
  hmm_data.db ← HMM 数据
  使用 Room createFromAsset() 初始化
end note

@enduml
